Fix fts:offsets()

Since the fts4 branch was merged, the fts:offsets() function has been
broken, because it assumed that properties were stored in the 'fts' table
in ID order but this was no longer the case.

The property names list is now created on init as static data, but this
requires having the 'fulltext_indexed' property available in all cases
where previously it has only been available if the ontologies were loaded
directly rather than from the GVDB cache.

tests/functional-tests/03-fts-functions.py has been improved to test the
fts:offsets() function more thoroughly.

https://bugzilla.gnome.org/show_bug.cgi?id=721880