src/libtracker-fts/tracker-fts.h
@@ -28,7 +28,8 @@
 G_BEGIN_DECLS
 
 gboolean    tracker_fts_init             (void);
-gboolean    tracker_fts_init_db          (sqlite3    *db);
+gboolean    tracker_fts_init_db          (sqlite3    *db,
+                                          GHashTable *tables);
 gboolean    tracker_fts_create_table     (sqlite3    *db,
                                           gchar      *table_name,
                                           GHashTable *tables,
